# python-OneTimePad

./: .pre-commit-config.yaml  README.md  one_time_pad.spec  pyproject.toml  renovate.json
.github/workflows/: lint-pr-title.yml  pre-commit.yml
src/one_time_pad/: __init__.py  config.py  dialog.py  generate_dialog.py  keyfile_dir_model.py  main_window.py  otp.py  worker.py
src/one_time_pad/designer/: dialog.ui  generate_dialog.ui  main_window.ui
