[project]
name = "one-time-pad"
version = "0.2.1"
description = "A GUI application for easy use of one-time pad encryption written in Python."
readme = "README.md"
authors = [
    { name = "martin-coding", email = "martin.coding.public@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = [
    "platformdirs>=4.3.6",
    "pyside6>=6.8.1",
]

[project.scripts]
one-time-pad = "one_time_pad:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.11.1",
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"*_model.py" = ["ARG002", "N802"]
